@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.958 2008-11-21 05:54:44 castaglia Exp $
+$Id: NEWS,v 1.959 2008-11-22 04:44:24 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -12,6 +12,7 @@ $Id: NEWS,v 1.958 2008-11-21 05:54:44 castaglia Exp $
 CVS
 --------------------------------
 - Bug 2045 - SQLShowInfo should not be displayed when query returns no data.
+- Bug 2915 - mod_rewrite does not work well for SITE commands.
 
 1.3.2rc3 - Released 20-Nov-2008
 --------------------------------
